[gd_scene load_steps=8 format=1]

[ext_resource path="res://Coches/Coche.002flago/GDhub.gd" type="Script" id=1]
[ext_resource path="res://Coches/Coche.002flago/marcadorAlfa.png" type="Texture" id=2]
[ext_resource path="res://Coches/Coche.002flago/agujaalfa.png" type="Texture" id=3]
[ext_resource path="res://Coches/Coche.002flago/450x270-fondo7sementos.png" type="Texture" id=4]
[ext_resource path="res://Coches/Coche.002flago/bitPixel.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Coches/Coche.002flago/bit.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Coches/Coche.002flago/bill.png" type="Texture" id=7]

[node name="HubFlafo" type="Control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="Velocidad" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 278.0
margin/top = 42.0
margin/right = 395.0
margin/bottom = 56.0
text = "Run"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Angulo" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 448.0
margin/top = 36.0
margin/right = 565.0
margin/bottom = 50.0
text = "ANgulo"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Hub" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 992.0
margin/top = 37.0
margin/right = 1109.0
margin/bottom = 51.0
text = "hub"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 128.29, 492.924 )
transform/scale = Vector2( 0.65, 0.8 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 343, 46, 299, 274 )

[node name="Mv0" type="Label" parent="Sprite"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 83.0
margin/right = 177.0
margin/bottom = 97.0
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Mv1" type="Label" parent="Sprite"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 37.0
margin/top = 11.0
margin/right = 154.0
margin/bottom = 25.0
text = "70"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Mv2" type="Label" parent="Sprite"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -21.0
margin/top = -57.0
margin/right = 96.0
margin/bottom = -43.0
text = "150"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 59.0
margin/top = 571.0
margin/right = 99.0
margin/bottom = 584.0

[node name="Sprite" type="Sprite" parent="Panel"]

transform/pos = Vector2( 40.6706, 3.75429 )
transform/scale = Vector2( 0.13, 0.13 )
texture = ExtResource( 3 )
offset = Vector2( 70, 0 )

[node name="Sprite 2" type="Sprite" parent="."]

transform/pos = Vector2( 116.855, 654.212 )
transform/scale = Vector2( 0.38, 0.4 )
texture = ExtResource( 4 )

[node name="Velo150led" type="Label" parent="."]

rect/scale = Vector2( 0.9, 0.9 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 57.0
margin/top = 639.0
margin/right = 97.0
margin/bottom = 658.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Velo150led1kmh" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 138.0
margin/top = 646.0
margin/right = 249.0
margin/bottom = 704.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Km/h"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpritePuntos" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1160, 654.212 )
transform/scale = Vector2( 0.38, 0.4 )
texture = ExtResource( 4 )

[node name="Puntos" type="Label" parent="SpritePuntos"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -152.632
margin/top = -23.0299
margin/right = -96.6316
margin/bottom = -4.02991
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Km/h"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpriteTiempo" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1160, 591.94 )
transform/scale = Vector2( 0.38, 0.4 )
texture = ExtResource( 4 )

[node name="Tiempo" type="Label" parent="SpriteTiempo"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -152.632
margin/top = -29.85
margin/right = -96.6316
margin/bottom = -10.85
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Km/h"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bill" type="Sprite" parent="."]

transform/pos = Vector2( 1525.12, 181.607 )
transform/scale = Vector2( 0.52, 0.52 )
texture = ExtResource( 7 )
region = true
region_rect = Rect2( 0, 0, 910, 520 )

[node name="AlMenu" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 36.0
margin/top = 28.0
margin/right = 124.0
margin/bottom = 83.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[connection signal="pressed" from="AlMenu" to="." method="_on_AlMenu_pressed"]


